[package]
name = "tsmd"
version = "0.1.1"
authors = ["Kevin Donahue <nonnontrivial@gmail.com>"]
edition = "2018"
readme = "README.md"
description = "generate markdown tables from type script interfaces"
keywords = ["cli"]
license = "MIT"
repository = "https://github.com/nonnontrivial/blubber.git"
categories = ["command-line-utilities"]

[dependencies]
tokio = { version = "0.2", features = ["macros", "fs"] }
serde = { version = "1.0.104", features = ["derive"] }
anyhow = "1.0.28"
serde_json = "1.0.53"
structopt = "0.3.12"

[profile.dev]
opt-level = 1
overflow-checks = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
